# weather-data

./: 2687089.csv  README.md  USC00452675.15m.2000-2021.csv.html  USC00452675.15m.2000-2021.csv.json  USC00452675.15m.2019-2021.csv  USC00452675.15m.2019-2021.csv.html  USC00452675.15m.2019-2021.csv.json  pyproject.toml
weather_data/: plotter.py
